<resources>

    <string name="app_name" translatable="false">Colibri Tweet</string>

    <string name="followers_hint">Followers</string>

    <string name="following_hint">Following</string>

    <string name="search_query_hint">Enter user name</string>

    <string name="search_hint">search</string>

    <string name="not_enough_symbols_msg">Please enter at least one symbol</string>

    <string name="loading_error_msg">Error during loading info</string>
    <string name="location">location</string>
    <string name="Name">Name</string>
    <string name="Nik">Nik</string>
    <string name="description">description</string>
    <string name="todo">TODO</string>


    <string name="fa_map_marker" translatable="false">&#xf041;</string>
    <string name="fa_heart_o" translatable="false">&#xf08a;</string>
    <string name="fa_retweet" translatable="false">&#xf079;</string>
    <string name="ion_search" translatable="false">&#xf2f5;</string>


    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">uRJ8JebdrBVByRIUQoJgXOEOu</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">O7V535sxWcXPRXG9PFwg6y54c3T1t83oLbXTq0EVrRsrBoa4PL</string>



</resources>